spacings fixed and also offset of navbar hrefs and the code is neater

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -20,10 +20,6 @@ body {
     padding: 0;
 }
 
-.container {
-    height: 100vh;
-    width: 100%;
-}
 
 a:hover{
     cursor: url('/assets/images/darkcyan.png'), auto ;
@@ -104,9 +100,9 @@ nav {
     font-weight: bolder;
 }
 
-.aboutme {
+/* .aboutme {
     margin-top: 20%;
-}
+} */
 
 h1.skilltitle {
     text-align: center;
@@ -122,20 +118,13 @@ h1.skilltitle {
     margin-top: 8%;
 }
 
-.sectiontitle {
-    text-align: center;
-    font-family: 'Pixel Digivolve', sans-serif;
-    color: #ffffff;
-    font-size: 3rem;
-    margin-bottom: 2rem;
-}
 
 .contacttitle {
     text-align: center;
     font-family: 'Pixel Digivolve', sans-serif;
     color: #ffffff;
     font-size: 3rem;
-    margin-bottom: 2rem;
+    /* margin-bottom: 2rem; */
 }
 
 .sectionbackground {
@@ -190,7 +179,7 @@ h1.skilltitle {
 
 .services-container {
     text-align: center;
-    margin: 0 10% 10% 10%;
+    /* margin: 0 10% 0% 10%; */
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: auto;
@@ -356,10 +345,7 @@ body {
     scroll-behavior: smooth;
 }
 
-.container {
-    height: 100vh;
-    width: 100%;
-}
+
 
 .container .Hello {
     position: absolute;
@@ -430,18 +416,19 @@ nav a {
     font-weight: bolder;
 }
 
+
 img {
     width: 100%;
     height: auto;
 }
 
-.aboutme {
+/* .aboutme {
     margin-top: 20%;
-}
-
+} */
+/* 
 .skills {
     margin-top: 10%;
-}
+} */
 
 .skills .tooltip .r-arsham {
     top: 190%;
@@ -466,9 +453,9 @@ img {
     visibility: visible;
 }
 
-.achive {
+/* .achive {
     margin-top: 15%;
-}
+} */
 
 .gallery {
     margin-top: 15%;
@@ -486,13 +473,7 @@ img {
     color:rgb(58, 58, 58);
 }
 
-.sectiontitle {
-    text-align: center ;
-    font-family: 'Pixel Digivolve', sans-serif;
-    color: #fff;
-    font-size: 3rem;
-    margin-bottom: 2rem;
-}
+
 
 .sectionbackground {
     left: 12.5%;
