--- a/assets/css/indexnew.css
+++ b/assets/css/indexnew.css
@@ -47,10 +47,6 @@ body {
     scroll-behavior: smooth;
 }
 
-.container {
-    height: 100%s;
-    width: 100%;
-}
 
 .container .Hello {
     position: absolute;
@@ -145,10 +141,10 @@ img {
     width: 100%;
     height: auto;
 }
-
+/* 
 .aboutme {
     margin-top: 0%;
-}
+} */
 
 .skills .tooltip .r-arsham {
     top: 190%;
@@ -197,7 +193,6 @@ img {
     font-family: 'Pixel Digivolve', sans-serif;
     color: #ffffff;
     font-size: 3rem;
-    margin-bottom: 2rem;
 }
 
 .sectionbackground {
@@ -216,9 +211,9 @@ img {
     text-align: center;
     font-size: 1.5rem;
     left: 10%;
-    margin-left: 5.25rem;
-    margin-right: 15.25rem;
-    margin-top: 2rem;
+    /* margin-left: 5.25rem; */
+    /* margin-right: 15.25rem; */
+    /* margin-top: 2rem; */
 }
 
 main {
@@ -619,10 +614,10 @@ body {
         max-width: 50%;
     }
 }
-
+/* 
 .aboutme {
     margin-top: 30%;
-}
+} */
 
 .contactimage {
     display: none;
@@ -698,7 +693,7 @@ kes the two columns stack on top of each other instead of next to each other */
         display:none;
     }
     .projtitle{
-        margin-top:35%;
+        /* margin-top:35%; */
     }
     
 
@@ -743,23 +738,17 @@ background: linear-gradient(to right, #000000, #1d1d1d); /* W3C, IE 10+/ Edge, F
         font-family: 'Pixel Digivolve', sans-serif;
         color: #ffffff;
         font-size: 3rem !important;
-        margin-top: 20%;
+        /* margin-top: 20%; */
     }
     .projtitle {
         text-align: center;
         font-family: 'Pixel Digivolve', sans-serif;
         color: #ffffff;
         font-size: 3rem !important;
-        margin-bottom: 10% !important;
-        margin-top: 45% !important;
+        /* margin-bottom: 10% !important; */
+        /* margin-top: 45% !important; */
     }
-    .sectiontitle {
-        text-align: center;
-        font-family: 'Pixel Digivolve', sans-serif;
-        color: #ffffff;
-        font-size: 3rem;
-        margin-bottom: 15% !important;
-    }
+
     .paddingpls {
         padding: 5%;
     }
@@ -791,12 +780,12 @@ background: linear-gradient(to right, #000000, #1d1d1d); /* W3C, IE 10+/ Edge, F
     .phone-title-margin {
         margin-bottom: 40%;
     }
-    .container {
+    /* .container {
         height: 50vh !important;
-    }
-    .skills {
+    } */
+    /* .skills {
         margin-top: 30%;
-    }
+    } */
     .phone-title-margin {
         margin-bottom: 40% !important;
     }
@@ -808,9 +797,9 @@ background: linear-gradient(to right, #000000, #1d1d1d); /* W3C, IE 10+/ Edge, F
     .aboutme {
         /* margin-top: 75% !important; */
     }
-    .skills {
+    /* .skills {
         margin-top: 25% !important;
-    }
+    } */
     .phone-scale {
         width: 95%;
     }
@@ -880,7 +869,7 @@ background: linear-gradient(to right, #000000, #1d1d1d); /* W3C, IE 10+/ Edge, F
     /* display: flex; */
     flex-wrap: nowrap;
     justify-content: center;
-    margin-top: 45rem;
+    /* margin-top: 45rem; */
 }
 
 .cardslide {
@@ -1007,12 +996,10 @@ a .logo {
 }
 
 .projtitle{
-    margin-top:5%;
+    /* margin-top:5%; */
 }
 
-.contacts{
-    margin-top:20%;
-}
+
 
 .cvbutton{
     background-color:white;
@@ -1023,4 +1010,19 @@ a .logo {
 
 .tablet-contact{
     display:none;
+}
+
+
+section{
+    margin: 0 0 120px 0;
+}
+#overlay {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background: black;
+    z-index: 11;
+    top: 0;
+    display: grid;
+    place-content: center;
 }
