--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -32,11 +32,6 @@ body {
     scroll-behavior: smooth;
 }
 
-.container {
-    height: 100vh;
-    width: 100%;
-}
-
 .container .Hello {
     position: absolute;
     top: 28%;
@@ -116,14 +111,14 @@ img {
     width: 100%;
     height: auto;
 }
-
+/* 
 .aboutme {
     margin-top: 20%;
 }
 
 .skills {
     margin-top: 10%;
-}
+} */
 
 .skills .tooltip .r-arsham {
     top: 190%;
@@ -147,14 +142,14 @@ img {
 .skills .tooltip:hover .tooltiptext {
     visibility: visible;
 }
-
+/* 
 .achive {
     margin-top: 15%;
 }
 
 .gallery {
     margin-top: 15%;
-}
+} */
 
 .gallery .parent {
     margin: auto;
@@ -171,13 +166,6 @@ img {
     grid-template-columns: repeat();
 }
 
-.sectiontitle {
-    text-align: center;
-    font-family: 'Pixel Digivolve', sans-serif;
-    color: #ffffff;
-    font-size: 3rem;
-    margin-bottom: 2rem;
-}
 
 .sectionbackground {
     left: 12.5%;
